deployment/static/minikube/deploy.yaml
---
# Source: scrumlr/charts/mongodb/templates/standalone/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: scrumlr-database
  namespace: default
  labels:
    app.kubernetes.io/name: mongodb
    helm.sh/chart: mongodb-10.23.13
    app.kubernetes.io/instance: scrumlr
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/component: mongodb
spec:
  type: ClusterIP
  ports:
    - name: mongodb
      port: 27017
      targetPort: mongodb
      nodePort: null
  selector:
    app.kubernetes.io/name: mongodb
    app.kubernetes.io/instance: scrumlr
    app.kubernetes.io/component: mongodb
---
# Source: scrumlr/templates/cache/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: scrumlr-cache
  labels:
      app.kubernetes.io/name: scrumlr-cache
      app.kubernetes.io/components: cache
      app: scrumlr-cache
      app.kubernetes.io/managed-by: Helm
      app.kubernetes.io/part-of: scrumlr
      helm.sh/chart: scrumlr-0.1.0
spec:
  ports:
    - port: 6379 
      targetPort: redis 
      protocol: TCP
  selector:
      app.kubernetes.io/name: scrumlr-cache
      app.kubernetes.io/components: cache
      app: scrumlr-cache
---
# Source: scrumlr/templates/dashboard/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: scrumlr-dashboard
  labels:
      app.kubernetes.io/name: scrumlr-dashboard
      app.kubernetes.io/components: dashboard
      app: scrumlr-dashboard
      app.kubernetes.io/managed-by: Helm
      app.kubernetes.io/part-of: scrumlr
      helm.sh/chart: scrumlr-0.1.0
spec:
  ports:
    - port: 4040 
      targetPort: dashboard 
      protocol: TCP
  selector:
      app.kubernetes.io/name: scrumlr-dashboard
      app.kubernetes.io/components: dashboard
      app: scrumlr-dashboard
---
# Source: scrumlr/templates/frontend/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: scrumlr-frontend
  labels:
      app.kubernetes.io/name: scrumlr-frontend
      app.kubernetes.io/components: frontend
      app: scrumlr-frontend
      app.kubernetes.io/managed-by: Helm
      app.kubernetes.io/part-of: scrumlr
      helm.sh/chart: scrumlr-0.1.0
spec:
  ports:
    - port: 80 
      targetPort: 80
      protocol: TCP
  selector:
      app.kubernetes.io/name: scrumlr-frontend
      app.kubernetes.io/components: frontend
      app: scrumlr-frontend
---
# Source: scrumlr/templates/livequery/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: scrumlr-livequery
  labels:
      app.kubernetes.io/name: scrumlr-livequery
      app.kubernetes.io/components: livequery
      app: scrumlr-livequery
      app.kubernetes.io/managed-by: Helm
      app.kubernetes.io/part-of: scrumlr
      helm.sh/chart: scrumlr-0.1.0
spec:
  ports:
    - port: 4000 
      targetPort: 4000 
      protocol: TCP
  selector:
      app.kubernetes.io/name: scrumlr-livequery
      app.kubernetes.io/components: livequery
      app: scrumlr-livequery
---
# Source: scrumlr/templates/server/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: scrumlr-server
  labels:
      app.kubernetes.io/name: scrumlr-server
      app.kubernetes.io/components: server
      app: scrumlr-server
      app.kubernetes.io/managed-by: Helm
      app.kubernetes.io/part-of: scrumlr
      helm.sh/chart: scrumlr-0.1.0
spec:
  ports:
    - port: 4000 
      targetPort: server 
      protocol: TCP
  selector:
      app.kubernetes.io/name: scrumlr-server
      app.kubernetes.io/components: server
      app: scrumlr-server
---
# Source: scrumlr/charts/mongodb/templates/standalone/dep-sts.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: scrumlr-database
  namespace: default
  labels:
    app.kubernetes.io/name: mongodb
    helm.sh/chart: mongodb-10.23.13
    app.kubernetes.io/instance: scrumlr
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/component: mongodb
    app.kubernetes.io/components: database
    app.kubernetes.io/name: scrumlr-database
    app.kubernetes.io/part-of: scrumlr
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
  selector:
    matchLabels:
      app.kubernetes.io/name: mongodb
      app.kubernetes.io/instance: scrumlr
      app.kubernetes.io/component: mongodb
  template:
    metadata:
      labels:
        app.kubernetes.io/name: mongodb
        helm.sh/chart: mongodb-10.23.13
        app.kubernetes.io/instance: scrumlr
        app.kubernetes.io/managed-by: Helm
        app.kubernetes.io/component: mongodb
    spec:
      
      serviceAccountName: scrumlr-database
      affinity:
        podAffinity:
          
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - podAffinityTerm:
                labelSelector:
                  matchLabels:
                    app.kubernetes.io/name: mongodb
                    app.kubernetes.io/instance: scrumlr
                    app.kubernetes.io/component: mongodb
                namespaces:
                  - "default"
                topologyKey: kubernetes.io/hostname
              weight: 1
        nodeAffinity:
          
      securityContext:
        fsGroup: 1001
        sysctls: []
      containers:
        - name: mongodb
          image: docker.io/bitnami/mongodb:4.4.8-debian-10-r24
          imagePullPolicy: "IfNotPresent"
          securityContext:
            runAsNonRoot: true
            runAsUser: 1001
          ports:
            - name: mongodb
              containerPort: 27017
          livenessProbe:
            exec:
              command:
                - mongo
                - --disableImplicitSessions
                - --eval
                - "db.adminCommand('ping')"
            initialDelaySeconds: 30
            periodSeconds: 10
            timeoutSeconds: 5
            successThreshold: 1
            failureThreshold: 6
          readinessProbe:
            exec:
              command:
                - bash
                - -ec
                - |
                  # Run the proper check depending on the version
                  [[ $(mongo --version | grep "MongoDB shell") =~ ([0-9]+\.[0-9]+\.[0-9]+) ]] && VERSION=${BASH_REMATCH[1]}
                  . /opt/bitnami/scripts/libversion.sh
                  VERSION_MAJOR="$(get_sematic_version "$VERSION" 1)"
                  VERSION_MINOR="$(get_sematic_version "$VERSION" 2)"
                  VERSION_PATCH="$(get_sematic_version "$VERSION" 3)"
                  if [[ "$VERSION_MAJOR" -ge 4 ]] && [[ "$VERSION_MINOR" -ge 4 ]] && [[ "$VERSION_PATCH" -ge 2 ]]; then
                      mongo --disableImplicitSessions $TLS_OPTIONS --eval 'db.hello().isWritablePrimary || db.hello().secondary' | grep -q 'true'
                  else
                      mongo --disableImplicitSessions $TLS_OPTIONS --eval 'db.isMaster().ismaster || db.isMaster().secondary' | grep -q 'true'
                  fi
            initialDelaySeconds: 5
            periodSeconds: 10
            timeoutSeconds: 5
            successThreshold: 1
            failureThreshold: 6
          resources:
            limits: {}
            requests: {}
          volumeMounts:
            - name: datadir
              mountPath: /bitnami/mongodb
              subPath: 
      volumes:
        - name: datadir
          emptyDir: {}
---
# Source: scrumlr/templates/cache/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: scrumlr-cache
  labels:
      app.kubernetes.io/name: scrumlr-cache
      app.kubernetes.io/components: cache
      app: scrumlr-cache
      app.kubernetes.io/managed-by: Helm
      app.kubernetes.io/part-of: scrumlr
      helm.sh/chart: scrumlr-0.1.0
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: scrumlr-cache
      app.kubernetes.io/components: cache
      app: scrumlr-cache
  template:
    metadata:
      labels:
        app.kubernetes.io/name: scrumlr-cache
        app.kubernetes.io/components: cache
        app: scrumlr-cache
    spec:
      containers:
        - name: scrumlr-cache 
          image: redis:6.2.4-alpine
          imagePullPolicy: IfNotPresent 
          ports:
          - name: redis
            containerPort: 6379
          livenessProbe:
            tcpSocket:
              port: 6379
            initialDelaySeconds: 10
            periodSeconds: 20
          readinessProbe:
            exec:
              command:
              - redis-cli
              - ping  
            initialDelaySeconds: 5
            periodSeconds: 10
      restartPolicy: Always
---
# Source: scrumlr/templates/dashboard/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: scrumlr-dashboard
  labels:
      app.kubernetes.io/name: scrumlr-dashboard
      app.kubernetes.io/components: dashboard
      app: scrumlr-dashboard
      app.kubernetes.io/managed-by: Helm
      app.kubernetes.io/part-of: scrumlr
      helm.sh/chart: scrumlr-0.1.0
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: scrumlr-dashboard
      app.kubernetes.io/components: dashboard
      app: scrumlr-dashboard
  template:
    metadata:
      labels:
        app.kubernetes.io/name: scrumlr-dashboard
        app.kubernetes.io/components: dashboard
        app: scrumlr-dashboard
    spec:
      containers:
      - name: scrumlr-dashboard
        image: scrumlr-dashboard 
        imagePullPolicy: IfNotPresent
        ports:
        - name: dashboard 
          containerPort: 4040 
        livenessProbe:
          httpGet:
            path: /dashboard
            port: 4040
          initialDelaySeconds: 30
          periodSeconds: 10
          timeoutSeconds: 5
      restartPolicy: Always
---
# Source: scrumlr/templates/frontend/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: scrumlr-frontend
  labels:
      app.kubernetes.io/name: scrumlr-frontend
      app.kubernetes.io/components: frontend
      app: scrumlr-frontend
      app.kubernetes.io/managed-by: Helm
      app.kubernetes.io/part-of: scrumlr
      helm.sh/chart: scrumlr-0.1.0
spec:
  replicas: 1 
  selector:
    matchLabels:
        app.kubernetes.io/name: scrumlr-frontend
        app.kubernetes.io/components: frontend
        app: scrumlr-frontend
  template:
    metadata:
      labels:
        app.kubernetes.io/name: scrumlr-frontend
        app.kubernetes.io/components: frontend
        app: scrumlr-frontend    
    spec:
      containers:
        - name: scrumlr-frontend
          image: scrumlr-frontend
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 80 
          livenessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 5
            periodSeconds: 3
          readinessProbe: 
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 3
            periodSeconds: 3
      restartPolicy: Always
---
# Source: scrumlr/templates/livequery/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: scrumlr-livequery
  labels:
      app.kubernetes.io/name: scrumlr-livequery
      app.kubernetes.io/components: livequery
      app: scrumlr-livequery
      app.kubernetes.io/managed-by: Helm
      app.kubernetes.io/part-of: scrumlr
      helm.sh/chart: scrumlr-0.1.0
spec:
  replicas: 1 
  selector:
    matchLabels:
      app.kubernetes.io/name: scrumlr-livequery
      app.kubernetes.io/components: livequery
      app: scrumlr-livequery
  template:
    metadata:
      labels:
        app.kubernetes.io/name: scrumlr-livequery
        app.kubernetes.io/components: livequery
        app: scrumlr-livequery  
    spec:
      containers:
        - name: scrumlr-livequery
          image: scrumlr-server
          imagePullPolicy: IfNotPresent 
          ports:
            - name: livequery 
              containerPort: 4000 
          livenessProbe:
            tcpSocket:
              port: livequery 
            initialDelaySeconds: 40
            periodSeconds: 20
          readinessProbe: 
            tcpSocket:
              port: livequery 
            initialDelaySeconds: 10 
            periodSeconds: 10
      restartPolicy: Always
---
# Source: scrumlr/templates/server/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: scrumlr-server
  labels:
      app.kubernetes.io/name: scrumlr-server
      app.kubernetes.io/components: server
      app: scrumlr-server
      app.kubernetes.io/managed-by: Helm
      app.kubernetes.io/part-of: scrumlr
      helm.sh/chart: scrumlr-0.1.0
spec:
  replicas: 1 
  selector:
    matchLabels:
      app.kubernetes.io/name: scrumlr-server
      app.kubernetes.io/components: server
      app: scrumlr-server
  template:
    metadata:
      labels:
        app.kubernetes.io/name: scrumlr-server
        app.kubernetes.io/components: server
        app: scrumlr-server
    spec:
      containers:
        - name: scrumlr-server
          image: scrumlr-server
          imagePullPolicy: IfNotPresent  
          ports:
            - name: server 
              containerPort: 4000 
          livenessProbe: 
            httpGet:
              path: /api/health
              port: server 
            initialDelaySeconds: 40
            periodSeconds: 10
            timeoutSeconds: 5
          readinessProbe: 
            httpGet:
              path: /api/users
              port: server 
              httpHeaders:
              - name: X-Parse-Application-Id
                value: Scrumlr
            initialDelaySeconds: 10 
            periodSeconds: 5
            timeoutSeconds: 5
      restartPolicy: Always
---
# Source: scrumlr/templates/dashboard/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: scrumlr-dashboard
  labels:
      app.kubernetes.io/name: scrumlr-dashboard
      app.kubernetes.io/components: dashboard
      app: scrumlr-dashboard
      app.kubernetes.io/managed-by: Helm
      app.kubernetes.io/part-of: scrumlr
      helm.sh/chart: scrumlr-0.1.0
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - http:
      paths:
      - path: /dashboard
        pathType: Prefix
        backend:
          service:
            name: scrumlr-dashboard
            port:
              number: 4040
---
# Source: scrumlr/templates/frontend/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: scrumlr-frontend
  labels:
      app.kubernetes.io/name: scrumlr-frontend
      app.kubernetes.io/components: frontend
      app: scrumlr-frontend
      app.kubernetes.io/managed-by: Helm
      app.kubernetes.io/part-of: scrumlr
      helm.sh/chart: scrumlr-0.1.0
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - http:
      paths:
      - path: / 
        pathType: Prefix
        backend:
          service:
            name: scrumlr-frontend
            port:
              number: 80 
      - path: /new
        pathType: Prefix
        backend:
          service:
            name: scrumlr-frontend
            port:
              number: 80 
      - path: /login 
        pathType: Prefix
        backend:
          service:
            name: scrumlr-frontend
            port:
              number: 80 
      - path: /board/
        pathType: Prefix
        backend:
          service:
            name: scrumlr-frontend
            port:
              number: 80
---
# Source: scrumlr/templates/livequery/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: scrumlr-livequery
  labels:
      app.kubernetes.io/name: scrumlr-livequery
      app.kubernetes.io/components: livequery
      app: scrumlr-livequery
      app.kubernetes.io/managed-by: Helm
      app.kubernetes.io/part-of: scrumlr
      helm.sh/chart: scrumlr-0.1.0
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - http:
      paths:
      - path: /ws 
        pathType: Prefix
        backend:
          service:
            name: scrumlr-livequery
            port:
              number: 4000
---
# Source: scrumlr/templates/server/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: scrumlr-server
  labels:
      app.kubernetes.io/name: scrumlr-server
      app.kubernetes.io/components: server
      app: scrumlr-server
      app.kubernetes.io/managed-by: Helm
      app.kubernetes.io/part-of: scrumlr
      helm.sh/chart: scrumlr-0.1.0
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - http:
      paths:
      - path: /api 
        pathType: Prefix
        backend:
          service:
            name: scrumlr-server
            port:
              number: 4000
